name:                bgapi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/netom/bgapi#readme
license:             BSD3
license-file:        LICENSE
author:              Tamas Fabian
maintainer:          giganetom@gmail.com
copyright:           MIT
category:            library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--                     , bytestring
--                     , serialport
--                     , fixed-vector
--  default-language:    Haskell2010

executable bgapitest
  hs-source-dirs:      src
  other-modules:       Commands
                     , Loop
                     , Types
  main-is:             bgapitest.hs
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , mtl
                     , serialport
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/netom/bgapi
